// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications matches snapshot 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Neue Helvetica W01;
  border-radius: 0.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #f36b32;
  font-weight: bold;
  border: none;
}

.c6:hover {
  background-color: #e96128;
}

.c6:active {
  background-color: #df571e;
}

.c5 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c4 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c4 {
  padding: 1rem;
  margin: 0;
}

.c2 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

@media (max-width:75em) {
  .c1 > .c4 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c4 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c2 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Updates Available
      </div>
      <p
        className="c3"
      >
        This page needs to be reloaded.
      </p>
    </div>
    <div
      className="c4 c5"
    >
      <button
        className="c6"
        onClick={[Function]}
      >
        Reload
      </button>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot 2`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Neue Helvetica W01;
  border-radius: 0.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #f36b32;
  font-weight: bold;
  border: none;
}

.c6:hover {
  background-color: #e96128;
}

.c6:active {
  background-color: #df571e;
}

.c5 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c4 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c4 {
  padding: 1rem;
  margin: 0;
}

.c2 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c2 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c2 a:hover {
  color: #0064A0;
}

@media (max-width:75em) {
  .c1 > .c4 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c4 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c2 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        Privacy and cookies
      </div>
      <p
        className="c3"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This site uses cookies to optimize your experience on our platform. By continuing to use this site you agree to use our cookies. If you'd like more information or would like to opt out please see our <a href=\\"/privacy-policy\\" target=\\"blank\\">Privacy Policy</a>",
          }
        }
      />
      <div
        className="c4 c5"
      >
        <button
          className="c6"
          onClick={[Function]}
        >
          Got it!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot 3`] = `
.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c0 {
  width: 100%;
  margin: 0;
  height: 0;
  z-index: 20;
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  top: 12rem;
}

.c1 {
  width: 100%;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #F8E8EB;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  border: 1px solid #E297A0;
}

.c1 .c2 {
  width: 90%;
  background: inherit;
  color: #C23834;
  font-weight: normal;
  line-height: 2.6rem;
}

.c5 {
  width: 1.8rem;
  height: 1.8rem;
  cursor: pointer;
}

.c4 {
  background: transparent;
  border: 0;
  padding: 0;
  color: #EDBFC5;
}

.c4:hover {
  color: #E297A0;
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

@media (max-width:75em) {
  .c0 {
    top: 15.3rem;
    z-index: calc(30 + 1);
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c1 {
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
    padding: 1.6rem 1.6rem;
  }
}

<div
  className="c0"
  data-testid="banner-body"
  onAnimationEnd={[Function]}
>
  <div
    className="c1"
  >
    <div
      className="c2 c3"
    >
      We're unable to find that search result. Please try another.
    </div>
    <button
      className="c4"
      onClick={[Function]}
    >
      <svg
        aria-hidden="true"
        className="c5"
        focusable="false"
        height="15px"
        version="1.1"
        viewBox="0 0 15 15"
        width="15px"
      >
        <g
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <g
            fill="currentColor"
            transform="translate(-302.000000, -18.000000)"
          >
            <g
              transform="translate(302.000000, 18.000000)"
            >
              <path
                d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
              />
            </g>
          </g>
        </g>
      </svg>
    </button>
  </div>
</div>
`;

exports[`Notifications matches snapshot 4`] = `
.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-family: Neue Helvetica W01;
  border-radius: 0.2rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  min-width: 12rem;
  font-size: 1.6rem;
  height: 4rem;
  padding: 0 3rem;
  color: #fff;
  background-color: #f36b32;
  font-weight: bold;
  border: none;
}

.c7:hover {
  background-color: #e96128;
}

.c7:active {
  background-color: #df571e;
}

.c6 {
  display: grid;
  overflow: visible;
  grid-auto-flow: column;
  grid-gap: 1rem;
}

.c1 {
  width: 100%;
}

.c1 .c5 {
  padding: 1rem;
  margin: 0;
}

.c4 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  margin: 1rem 0 0 0;
  padding: 1rem;
}

.c4 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c4 a:hover {
  color: #0064A0;
}

.c0 {
  width: 30rem;
  margin-left: calc(100% - 30rem);
  overflow: visible;
  position: -webkit-sticky;
  position: sticky;
  padding-top: 1px;
  margin-top: -1px;
  z-index: 20;
  top: 0;
  height: 0;
}

.c0 > div {
  margin: 0.5rem;
  background-color: #fff;
  border-style: solid;
  border-color: #e5e5e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-width: thin;
  box-shadow: 0 1rem 2rem 0 rgba(0,0,0,0.2);
  overflow: visible;
}

.c0 > div > .c5 {
  padding: 1rem;
  margin: 0;
}

.c3 {
  font-family: Neue Helvetica W01;
  color: #424242;
  font-size: 1.6rem;
  line-height: 2.5rem;
  padding: 0.5rem 1rem;
  font-weight: bold;
  background-color: #fafafa;
  line-height: 4rem;
}

.c3 a {
  color: #027EB5;
  cursor: pointer;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c3 a:hover {
  color: #0064A0;
}

.c8 .c2 {
  width: 90%;
  background: inherit;
  color: #C23834;
  font-weight: normal;
  line-height: 2.6rem;
}

@media (max-width:75em) {
  .c1 > .c5 {
    display: block;
    padding: 1.6rem 0 0 0;
  }
}

@media (max-width:75em) {
  .c4 {
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 {
    box-shadow: inset 0 -0.2rem 0.2rem 0 rgba(0,0,0,0.14);
    background-color: #fafafa;
    margin: 0;
    height: auto;
    width: 100%;
    padding: 0;
  }
}

@media (max-width:75em) {
  .c0 > div {
    margin: 1.6rem;
    box-shadow: none;
    border: none;
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    background-color: initial;
  }

  .c0 > div > .c5 {
    padding: 0;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media (max-width:75em) {
  .c3 {
    padding: 0;
    line-height: 2rem;
    background-color: initial;
  }
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2 c3"
      >
        Notification
      </div>
      <p
        className="c4"
        dangerouslySetInnerHTML={
          Object {
            "__html": "asdf",
          }
        }
      />
    </div>
    <div
      className="c5 c6"
    >
      <button
        className="c7"
        onClick={[Function]}
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Notifications matches snapshot for unknown notification 1`] = `null`;
